Playing for a while

--- a/src/layouts/css/index.css
+++ b/src/layouts/css/index.css
@@ -22,11 +22,40 @@ html {
     font-size: 10px;
 }
 
+@font-face {
+  font-family: 'Open Sans';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../../static/fonts/Open_Sans/OpenSans-Regular.ttf');
+  /* src: url('../../../public/fonts/Miriam.eot?#iefix') format('embedded-opentype'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.eot') format('woff2'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.woff') format('woff'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.ttf') format('truetype'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.svg') format('svg'); */
+}
+
+@font-face {
+  font-family: 'Sawarabi Mincho';
+  font-style: normal;
+  font-weight: 400;
+  src: url('../../../static/fonts/Sawarabi_Mincho/SawarabiMincho-Regular.ttf');
+  /* src: url('../../../public/fonts/Miriam.eot?#iefix') format('embedded-opentype'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.eot') format('woff2'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.woff') format('woff'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.ttf') format('truetype'),
+      url('../../../public/fonts/miriam-libre-v2-latin-regular.svg') format('svg'); */
+}
+
+/* body {
+  margin: 15px 15px;
+} */
+
 body,
 h1, h2, h3, h4, h5, h6,
 p, a,
 li, ul {
-    font-family: 'Avenir', 'Helvetica Neue', sans-serif;
+    /* color: #844747; */
+    font-family: 'Open Sans', 'Lato', sans-serif;
 }
 
 h1, h2, h3, h4, h5, h6, p, ul, ol, dl {
